Add cairo-platinum message
