# docs/static/openapi.yml
@@ -40,6 +40,45 @@ paths:
                   additionalProperties: {}
       tags:
         - Query
+  /alignedlayer.verify.Msg/CairoPlatinum:
+    post:
+      operationId: AlignedlayerVerifyMsg_CairoPlatinum
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              creator:
+                type: string
+              proof:
+                type: string
+      tags:
+        - Msg
   /alignedlayer.verify.Msg/GnarkPlonk:
     post:
       operationId: AlignedlayerVerifyMsg_GnarkPlonk
@@ -4108,6 +4147,15 @@ definitions:
         description: params holds all the parameters of this module.
         type: object
     description: QueryParamsResponse is response type for the Query/Params RPC method.
+  alignedlayer.verify.MsgCairoPlatinum:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+  alignedlayer.verify.MsgCairoPlatinumResponse:
+    type: object
   alignedlayer.verify.MsgGnarkPlonk:
     type: object
     properties:
