# x/verify/keeper/msg_server_cairo_platinum.go
@@ -1,0 +1,18 @@
+package keeper
+
+import (
+	"context"
+
+	"alignedlayer/x/verify/types"
+
+	sdk "github.com/cosmos/cosmos-sdk/types"
+)
+
+func (k msgServer) CairoPlatinum(goCtx context.Context, msg *types.MsgCairoPlatinum) (*types.MsgCairoPlatinumResponse, error) {
+	ctx := sdk.UnwrapSDKContext(goCtx)
+
+	// TODO: Handling the message
+	_ = ctx
+
+	return &types.MsgCairoPlatinumResponse{}, nil
+}
