# x/verify/types/codec.go
@@ -11,6 +11,9 @@ func RegisterInterfaces(registry cdctypes.InterfaceRegistry) {
 	registry.RegisterImplementations((*sdk.Msg)(nil),
 		&MsgGnarkPlonk{},
 	)
+	registry.RegisterImplementations((*sdk.Msg)(nil),
+		&MsgCairoPlatinum{},
+	)
 	// this line is used by starport scaffolding # 3
 
 	registry.RegisterImplementations((*sdk.Msg)(nil),
